--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,18 @@
     background: #000;
     overflow: hidden;
 }
+
+
+canvas {
+    width: 320px;
+    height: 630px;
+    display: flex;
+    justify-content: center;
+}
+@media (max-width: 600px) {
+    canvas {
+         width: 100%;
+        height: 100vh;
+    }
+    
+}
